# voxel_enginevk

./: .gitignore  .gitmodules  AGENT.md  AGENTS.md  CMakeLists.txt  NOTES.md  README.md  build_and_sync.ps1  build_and_sync.sh  chunk_refactor.md  imgui.ini  lighting_1.md  lighting_2.md  run-cmake.sh  run_tests.ps1  structure_plan.md  todo.md  world_gen.md
.github/: copilot-instructions.md
Documents/: player_system_1.md  voxel_format.md  voxel_lighting.md  (+1 more)
src/: CMakeLists.txt  block.h  camera.cpp  camera.h  chunk.cpp  chunk.h  chunk_manager.cpp  chunk_manager.h  chunk_mesher.cpp  chunk_mesher.h  constants.h  cube_engine.cpp  cube_engine.h  frame_clock.cpp  frame_clock.h  junk.cpp  main.cpp  player.cpp  player.h  random.h  sdl_utils.h  string_utils.h  terrain_gen.cpp  terrain_gen.h  thread_types.h  vk_engine.cpp  vk_engine.h  vk_initializers.cpp  vk_initializers.h  vk_mesh.cpp  vk_mesh.h  vk_pipeline_builder.cpp  vk_pipeline_builder.h  vk_types.h  vk_util.cpp  vk_util.h  vk_vertex.cpp  vk_vertex.h  window_system.cpp  window_system.h  (+2 more)
src/collections/: spare_set.h
src/components/: character_body_component.h  character_motor_component.h  component.h  game_object.h  player_input_component.cpp  player_input_component.h  spatial_collider_component.h  voxel_animation_component.h  voxel_assembly_component.h  voxel_model_component.h
src/config/: config_paths.cpp  config_paths.h  config_service.cpp  config_service.h  game_settings_config_repository.cpp  game_settings_config_repository.h  json_document_store.cpp  json_document_store.h  world_gen_config_repository.cpp  world_gen_config_repository.h  world_geometry_config_repository.cpp  world_geometry_config_repository.h
src/editing/: document_command_history.h  document_editor_session.h
src/game/: block.h  chunk.cpp  chunk.h  cloud_structure_generator.cpp  cloud_structure_generator.h  cube_engine.cpp  cube_engine.h  decoration.cpp  decoration.h  entity.h  player.cpp  player.h  player_entity.cpp  player_entity.h  player_input_state.h  structure.cpp  structure.h  tree_structure_generator.cpp  tree_structure_generator.h  world.cpp  world.h  world_collision.cpp  world_collision.h
src/physics/: aabb.cpp  aabb.h
src/render/: chunk_decoration_render_registry.cpp  chunk_decoration_render_registry.h  chunk_render_registry.cpp  chunk_render_registry.h  compute_shader.cpp  compute_shader.h  frame_render_context.h  material.cpp  material.h  material_manager.cpp  material_manager.h  mesh.cpp  mesh.h  mesh_allocator.cpp  mesh_allocator.h  mesh_manager.cpp  mesh_manager.h  mesh_payload.cpp  mesh_payload.h  mesh_release_queue.cpp  mesh_release_queue.h  pipeline_builder.h  render_pass.h  render_primitives.cpp  render_primitives.h  render_queue.h  resource.cpp  resource.h  scene_render_state.h  scene_renderer.cpp  scene_renderer.h  shader_program.cpp  shader_program.h  staging_buffer.cpp  staging_buffer.h  ui_renderer.cpp  ui_renderer.h
src/scenes/: animation_editor_scene.cpp  animation_editor_scene.h  blueprint_builder_scene.cpp  blueprint_builder_scene.h  editor_orbit_camera.h  editor_preview_primitives.h  editor_shortcuts.h  game_scene.cpp  game_scene.h  orbit_orientation_gizmo.cpp  orbit_orientation_gizmo.h  scene.h  scene_services.h  voxel_assembly_scene.cpp  voxel_assembly_scene.h  voxel_editor_scene.cpp  voxel_editor_scene.h
src/settings/: game_settings.cpp  game_settings.h
src/ui/: ui_debug_font_presets.h  ui_draw_commands.h  ui_font_backend_freetype.cpp  ui_font_backend_freetype.h  ui_font_backend_msdf.cpp  ui_font_backend_msdf.h  ui_frame_builder.h  ui_runtime.cpp  ui_runtime.h  ui_signal.h  ui_text.cpp  ui_text.h  ui_text_system.cpp  ui_text_system.h  ui_types.h  ui_world.cpp  ui_world.h
src/utils/: functionalqueue.h  logging_utils.h
src/voxel/: voxel_animation_asset.h  voxel_animation_clip_asset_manager.cpp  voxel_animation_clip_asset_manager.h  voxel_animation_clip_repository.cpp  voxel_animation_clip_repository.h  voxel_animation_controller_asset_manager.cpp  voxel_animation_controller_asset_manager.h  voxel_animation_controller_repository.cpp  voxel_animation_controller_repository.h  voxel_animation_pose.h  voxel_animation_runtime.cpp  voxel_animation_runtime.h  voxel_assembly_asset.h  voxel_assembly_asset_manager.cpp  voxel_assembly_asset_manager.h  voxel_assembly_component_adapter.cpp  voxel_assembly_component_adapter.h  voxel_assembly_repository.cpp  voxel_assembly_repository.h  voxel_asset_manager.cpp  voxel_asset_manager.h  voxel_component_render_adapter.cpp  voxel_component_render_adapter.h  voxel_mesher.cpp  voxel_mesher.h  voxel_model.h  voxel_model_component_adapter.cpp  voxel_model_component_adapter.h  voxel_model_repository.cpp  voxel_model_repository.h  voxel_orientation.h  voxel_picking.cpp  voxel_picking.h  voxel_placement.cpp  voxel_placement.h  voxel_render_instance.cpp  voxel_render_instance.h  voxel_render_registry.cpp  voxel_render_registry.h  voxel_runtime_asset.h  (+4 more)
src/world/: chunk_cache.cpp  chunk_cache.h  chunk_dirty_tracker.cpp  chunk_dirty_tracker.h  chunk_lighting.cpp  chunk_lighting.h  chunk_manager.cpp  chunk_manager.h  chunk_mesher.cpp  chunk_mesher.h  chunk_neighborhood.cpp  chunk_neighborhood.h  chunk_queue.cpp  chunk_queue.h  chunk_record.h  chunk_scheduler.cpp  chunk_scheduler.h  dynamic_light_registry.cpp  dynamic_light_registry.h  neighbor_barrier.cpp  neighbor_barrier.h  terrain_gen.cpp  terrain_gen.h  thread_pool.cpp  thread_pool.h  world_edit_queue.cpp  world_edit_queue.h  world_geometry.cpp  world_geometry.h  world_light_sampler.cpp  world_light_sampler.h
src/world/generation/: terrain_generation_buffers.cpp  terrain_generation_helpers.cpp  terrain_generation_helpers.h
src/world/structures/: cloud_structure_generator.cpp  cloud_structure_generator.h  structure.cpp  structure.h  tree_structure_generator.cpp  tree_structure_generator.h
tests/: CMakeLists.txt  engine_tests.cpp  gameplay_tests.cpp  settings_tests.cpp  test_support.cpp  test_support.h  ui_runtime_tests.cpp  voxel_asset_tests.cpp  voxel_geometry_tests.cpp  world_geometry_tests.cpp  world_tests.cpp
(+114 files in other folders)
